--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2",
+    "browserify-zlib": "^0.2.0",
     "core-js": "^3.8.3",
+    "path-browserify": "^1.0.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
